syntax = "proto3";

option go_package = "github.com/Jazee6/treehole/cmd/account/rpc;rpc";

package proto;

import "code.proto";

service AccountService {
  rpc AccountRegister(RegisterRequest) returns (RegisterResponse) {}
  rpc SendCaptcha(SendCaptchaRequest) returns (SendCaptchaResponse) {}
  rpc AccountLogin(LoginRequest) returns (LoginResponse) {}
  rpc GetCampusList(CampusListReq) returns (CampusListResp) {}
  rpc GetTopicInfo(TopicInfoReq) returns (TopicInfoResp) {}
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string captcha = 3;
  uint32 campus_id = 4;
}

message RegisterResponse {
  Code code = 1;
  string token = 2;
}

message SendCaptchaRequest {
  string email = 1;
}

message SendCaptchaResponse {
  Code code = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  Code code = 1;
  string token = 2;
}

message CampusListReq {
  string name = 1;
}

message Campus {
  uint32 id = 1;
  string name = 2;
}

message CampusListResp {
  repeated Campus campus = 1;
}

message TopicInfoReq{
  repeated uint32 uid = 1;
}

message TopicInfo{
  uint32 uid = 1;
  string campus_name = 2;
  bool verified = 3;
}

message TopicInfoResp{
  repeated TopicInfo topic_info = 1;
}