syntax = "proto3";

option go_package = "github.com/Jazee6/treehole/cmd/topic/rpc;rpc";

package proto;

import "code.proto";

service TopicService {
  rpc CreateTopic(CreateTopicRequest) returns (CreateTopicResponse) {}
  rpc GetTopic(GetTopicRequest) returns (GetTopicResponse) {}
  rpc PutStar(PutStarReq) returns (PutStarResp) {}
}

message CreateTopicRequest {
  uint32 uid = 1;
  string content = 2;
}

message CreateTopicResponse {
  Code code = 1;
}

message GetTopicRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  uint32 uid = 3;
}

message Topic {
  uint32 id = 1;
  string content = 2;
  string created_at = 3;
  string campus = 4;
  bool verified = 5;
  bool starred = 6;
  uint32 star_count = 7;
}

message GetTopicResponse {
  Code code = 1;
  repeated Topic topics = 2;
}

message PutStarReq{
  uint32 uid = 1;
  uint32 tid = 2;
}

message PutStarResp{
  Code code = 1;
}
